# sustas

./: Cargo.toml  README.md  flake.nix
src/: bar.rs  block.rs  config.rs  dbus.rs  format.rs  lib.rs  main.rs  modules.rs
src/modules/: battery.rs  bluetooth.rs  clock.rs  wifi.rs
