[package]
name = "sustas"
version = "0.1.0"
edition = "2021"
license = "0BSD"
readme = "README.md"
description = "A tool to generate desktop status lines."
keywords = ["statusbar", "dbus"]
categories = ["config", "command-line-utilities"]
repository = "https://github.com/joshua-cooper/sustas"

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.63"
chrono = "0.4.23"
dirs = "4.0.0"
futures-util = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"
zbus = { version = "3.9.0", features = ["tokio"] }
